force-app/main/default/objects/leankor__Swimlane__c/leankor__Swimlane__c.object-meta.xml
<CustomObject>
    <description>Each master container can have one or more swim lane. Each swim lane can have one or more zones.</description>
    <label>Swimlane</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Swimlane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swimlanes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>