force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__CardPerRow__c.field-meta.xml
<CustomField>
    <fullName>leankor__CardPerRow__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This field shows limit on KanbanCard in Swimlane i.e. how many card could be put in a single row of Swimlane.</description>
    <inlineHelpText>This field shows limit on KanbanCard in Swimlane i.e. how many card could be put in a single row of Swimlane.</inlineHelpText>
    <label>Card Per Row</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>