force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__CmpID__c.field-meta.xml
<CustomField>
    <fullName>leankor__CmpID__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>This field contains ID of those components which use in UI.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains ID of those components which use in UI.</inlineHelpText>
    <label>Component ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>