force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Color__c.field-meta.xml
<CustomField>
    <fullName>leankor__Color__c</fullName>
    <defaultValue>&quot;#6ED07A&quot;</defaultValue>
    <description>This field contains color codes of Swimlane.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains color codes of Swimlane.</inlineHelpText>
    <label>Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>