force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__GUID__c.field-meta.xml
<CustomField>
    <fullName>leankor__GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A 36 character, globally unique identifier of this Master Container instance. It is automatically generated each time a card is created and survives the entire life-cycle of the Swimlane.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Enter a valid GUID such as &quot;305ee49a-8489-4091-bf76-8a07046278f7&quot;.</inlineHelpText>
    <label>GUID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>