force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Height__c.field-meta.xml
<CustomField>
    <fullName>leankor__Height__c</fullName>
    <defaultValue>368</defaultValue>
    <description>This field shows height of Swimlane in pixel.</description>
    <inlineHelpText>Enter the height of Swimlane in pixel.</inlineHelpText>
    <label>Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>