force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Help__c.field-meta.xml
<CustomField>
    <fullName>leankor__Help__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Help</label>
    <type>TextArea</type>
</CustomField>