force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Limit__c.field-meta.xml
<CustomField>
    <fullName>leankor__Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field shows maximum limit of KanbanCard that can be in Swimlane. This limit depends on user.</description>
    <inlineHelpText>This field shows maximum limit of KanbanCard that can be in Swimlane. This limit depends on user.</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>