force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__MasterContainer__c.field-meta.xml
<CustomField>
    <fullName>leankor__MasterContainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains ID of Master Container in which Swimlane persents.</description>
    <inlineHelpText>This field contains ID of Master Container in which Swimlane persents.</inlineHelpText>
    <label>Master Container</label>
    <referenceTo>leankor__MasterContainer__c</referenceTo>
    <relationshipLabel>Swimlanes</relationshipLabel>
    <relationshipName>Swimlanes</relationshipName>
    <type>Lookup</type>
</CustomField>