force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Title__c.field-meta.xml
<CustomField>
    <fullName>leankor__Title__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>This filed shows title at the head of Swimlane.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This filed shows title at the head of Swimlane.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>