force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Top__c.field-meta.xml
<CustomField>
    <fullName>leankor__Top__c</fullName>
    <defaultValue>100</defaultValue>
    <description>This field shows upper dimension of Swimlane.</description>
    <inlineHelpText>This field shows upper dimension of Swimlane.</inlineHelpText>
    <label>Top</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>