force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Unit__c.field-meta.xml
<CustomField>
    <fullName>leankor__Unit__c</fullName>
    <defaultValue>&quot;effort&quot;</defaultValue>
    <description>This field show limit of Units(Efforts, Points).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field show limit of Units(Efforts, Points).</inlineHelpText>
    <label>Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>