force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains ID of Value Stream in which Swimlane presents.</description>
    <inlineHelpText>This field contains ID of Value Stream in which Swimlane presents.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Swimlanes</relationshipLabel>
    <relationshipName>Swimlanes</relationshipName>
    <type>Lookup</type>
</CustomField>