force-app/main/default/objects/leankor__Swimlane__c/fields/leankor__Width__c.field-meta.xml
<CustomField>
    <fullName>leankor__Width__c</fullName>
    <defaultValue>388</defaultValue>
    <description>This field shows width of swimlane that how much wide Swimlane is.</description>
    <inlineHelpText>This field shows width of swimlane that how much wide Swimlane is.</inlineHelpText>
    <label>Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>